# ComputacionGraficaAvanzada2024

./: CMakeLists.txt  README.md
00-Introduccion/: CMakeLists.txt
00-Introduccion/src/: main.cpp
01-AnimacionKeyFrames/: CMakeLists.txt
01-AnimacionKeyFrames/src/: main.cpp
02-SkeletonAnimation/: CMakeLists.txt
CGALib/: CMakeLists.txt
